<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuestLoginActivity">

    <TextView
        android:id="@+id/guest_email_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/admin_email_textview"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/guest_email_login_editText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/guest_email_login_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/guest_email_login_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guest_email_login_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guest_password_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:text="@string/admin_password_textview"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/guest_password_login_editText"
        app:layout_constraintStart_toStartOf="@+id/guest_email_login_textView" />

    <EditText
        android:id="@+id/guest_password_login_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/guest_password_login"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guest_password_login_textView"
        app:layout_constraintTop_toBottomOf="@+id/guest_email_login_editText" />

    <Button
        android:id="@+id/guest_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/admin_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guest_password_login_editText" />


</android.support.constraint.ConstraintLayout>