<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HotelDetailsActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/room_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="Room ID"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/hotel_name_box"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/room_id_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/hotel_room_id_box"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hotel_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/room_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="Room Type"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/hotel_name_box"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/room_type_box"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/room_type_box"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hotel_name"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/hotel_room_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="Hotel ID"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/hotel_name_box"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/hotel_room_id_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/h_r_id_box"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hotel_name"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/no_of_rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="No.of Rooms"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/no_of_rooms_box"
                app:layout_constraintStart_toStartOf="@+id/hotel_name" />

            <EditText
                android:id="@+id/no_of_rooms_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/no_of_rooms"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/no_of_rooms"
                app:layout_constraintTop_toBottomOf="@+id/hotel_name_box" />

            <TextView
                android:id="@+id/room_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="Room's Price"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/room_price_box"
                app:layout_constraintStart_toStartOf="@+id/no_of_rooms" />

            <EditText
                android:id="@+id/room_price_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/room_price_box"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/room_description"
                app:layout_constraintTop_toBottomOf="@+id/no_of_rooms_box" />

            <TextView
                android:id="@+id/room_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="Room's Description"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/room_description_box"
                app:layout_constraintStart_toStartOf="@+id/room_description" />

            <EditText
                android:id="@+id/room_description_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/room_description_box"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/room_description"
                app:layout_constraintTop_toBottomOf="@+id/room_price_box" />

            <TextView
                android:id="@+id/room_facilities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="Room's facilities"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/room_facilities_box"
                app:layout_constraintStart_toStartOf="@+id/room_description" />

            <EditText
                android:id="@+id/room_facilities_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/room_facilities_box"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/room_facilities"
                app:layout_constraintTop_toBottomOf="@+id/room_description_box" />


            <TextView
                android:id="@+id/room_image"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="Upload room's image"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/hotel_description"
                app:layout_constraintTop_toBottomOf="@+id/hotel_description" />

            <TextView
                android:id="@+id/upload_room_image_click"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:text="Click the below ImageView"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/hotel_description"
                app:layout_constraintTop_toBottomOf="@+id/hotel_description" />

            <ImageView
                android:id="@+id/hotel_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/room_image"
                app:layout_constraintTop_toBottomOf="@+id/hotel_description_box"
                app:srcCompat="@drawable/ic_launcher_background"
                tools:ignore="VectorDrawableCompat" />

            <Button
                android:id="@+id/room_details_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="SUBMIT"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hotel_imageView" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>